B&L QA/objects/Indirect_Account__c.object
<CustomObject>
    <description>To store sales done through BNL Distributors</description>
    <fields>
        <fullName>Distributor_Id_Name__c</fullName>
        <description>For Mobile View</description>
        <formula>( Distributor_Id__c &amp; &apos; - &apos; &amp; Distributor_Name__c )</formula>
        <label>Distributor Id Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_Id__c</fullName>
        <label>Distributor Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_Name__c</fullName>
        <label>Distributor Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doorway_Id__c</fullName>
        <label>Doorway Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doorway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Doorway</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Indirect_Sales1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Indirect_Customer_Id__c</fullName>
        <label>Indirect Customer Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_System_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy System Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_System_Name__c</fullName>
        <label>Legacy System Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SETID__c</fullName>
        <label>SETID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Id__c</fullName>
        <label>Ship To Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Indirect_Sales</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Indirect Account</label>
    <nameField>
        <displayFormat>IS{0000000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Indirect Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>